# hw-haystack

./: .env.example  .gitignore  README.md  duckduckgo.py  hs_with_ddgs.py  justfile  main.py  prompt-v2.txt  prompt.txt  pyproject.toml
bot/: __init__.py  __main__.py  agent.py  app.py  chroma.py  memory.py  tools.py
bot/media/: __init__.py  storage.py  telegram.py
bot_v2/: __init__.py  __main__.py
bot_v2/bot/: __init__.py  app.py  config.py  downloads.py  telegram.py
bot_v2/components/: __init__.py  chroma.py  document_retriever.py  enricher.py  memory.py  summarizer.py
bot_v2/components/media/: __init__.py  storage.py  telegram.py
bot_v2/components/tools/: __init__.py  agent_tools.py
bot_v2/pipelines/: __init__.py  generation.py  ingestion.py
