[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hw-haystack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.29.0",
    "chroma-haystack>=4.3.0",
    "ddgs>=9.14.4",
    "docling-haystack>=1.1.0",
    "haystack-ai>=2.30.1",
    "httpx>=0.28.1",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
hw-haystack-bot = "bot.app:cli"
hw-haystack-bot-v2 = "bot_v2.bot.app:cli"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.hatch.build.targets.wheel]
packages = ["bot", "bot_v2"]
